--- a/arxiv.sty
+++ b/arxiv.sty
@@ -26,8 +26,7 @@
 
 
 
-\newcommand{\headeright}{A Preprint}
-\newcommand{\undertitle}{A Preprint}
+\newcommand{\headeright}{\today}
 \newcommand{\shorttitle}{\@title}
 
 \usepackage{fancyhdr}
@@ -35,7 +34,7 @@
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0.4pt}
 \fancyheadoffset{0pt}
-\rhead{\scshape \footnotesize \headeright}
+\rhead{\footnotesize \headeright}
 \chead{\shorttitle}
 \cfoot{\thepage}
 
@@ -119,7 +118,7 @@
 \renewcommand{\floatpagefraction}{0.7}
 
 \newlength{\@abovecaptionskip}\setlength{\@abovecaptionskip}{7\p@}
-\newlength{\@belowcaptionskip}\setlength{\@belowcaptionskip}{\z@}
+\newlength{\@belowcaptionskip}\setlength{\@belowcaptionskip}{\p@}
 
 \setlength{\abovecaptionskip}{\@abovecaptionskip}
 \setlength{\belowcaptionskip}{\@belowcaptionskip}
@@ -201,14 +200,14 @@
 
 % rules for title box at top of first page
 \newcommand{\@toptitlebar}{
-  \hrule height 2\p@
+  \hrule height 2.5\p@
   \vskip 0.25in
   \vskip -\parskip%
 }
 \newcommand{\@bottomtitlebar}{
   \vskip 0.29in
   \vskip -\parskip
-  \hrule height 2\p@
+  \hrule height 1\p@
   \vskip 0.09in%
 }
 
@@ -221,10 +220,9 @@
     \vskip 0.1in
     \@toptitlebar
     \centering
-    {\LARGE\sc \@title\par}
+    {\LARGE \@title\par}
     \@bottomtitlebar
-    \textsc{\undertitle}\\
-    \vskip 0.1in
+
     \def\And{%
       \end{tabular}\hfil\linebreak[0]\hfil%
       \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\ignorespaces%
@@ -234,7 +232,7 @@
       \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\ignorespaces%
     }
     \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\@author\end{tabular}%
-  \vskip 0.4in \@minus 0.1in \center{\@date}   \vskip 0.2in
+  \vskip 0.2in \@minus 0.1in \center{\@date}   \vskip 0.4in
   }
 }
 
@@ -248,11 +246,21 @@
   \end@float%
 }
 
+% links styling
+\usepackage{hyperref}
+\usepackage[dvipsnames]{xcolor}
+\hypersetup{
+  colorlinks   = true, %Colours links instead of ugly boxes
+  urlcolor     = blue, %Colour for external hyperlinks
+  linkcolor    = blue, %Colour of internal links
+  citecolor   = BrickRed %Colour of citations
+}
+
 % abstract styling
 \renewenvironment{abstract}
 {
   \centerline
-  {\large \bfseries \scshape Abstract}
+  {\large \bfseries Abstract}
   \begin{quote}
 }
 {
@@ -260,3 +268,4 @@
 }
 
 \endinput
+
