Fix: Use uniform color for all links

--- a/arxiv.sty
+++ b/arxiv.sty
@@ -28,7 +28,7 @@
 
 
 
-\newcommand{\headeright}{\today}
+\newcommand{\headeright}{A Preprint}
 \newcommand{\shorttitle}{\@title}
 
 \usepackage{fancyhdr}
@@ -255,7 +255,7 @@
   colorlinks   = true, %Colours links instead of ugly boxes
   urlcolor     = blue, %Colour for external hyperlinks
   linkcolor    = blue, %Colour of internal links
-  citecolor   = BrickRed %Colour of citations
+  citecolor   = blue %Colour of citations
 }
 
 % abstract styling
