--- a/arxiv.sty
+++ b/arxiv.sty
@@ -3,8 +3,8 @@
 \ProcessOptions\relax
 
 % fonts
-\usepackage[T1]{fontenc}    % use 8-bit T1 fonts
-\usepackage{XCharter}       % font
+\usepackage[T1]{fontenc}        % use 8-bit T1 fonts
+\usepackage{newpxtext,eulerpx}  % font
 \renewcommand{\rmdefault}{ptm}
 \renewcommand{\sfdefault}{phv}
 
